<resources>
    <string name="app_name">密码保险箱-登录或注册</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_name">帐号</string>
    <string name="prompt_site">网站</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_add">添加</string>
    <string name="action_modify">修改</string>
    <string name="action_show">查看</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">Email 格式错误.</string>
    <string name="error_invalid_password">密码太短.</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请输入内容</string>
    <string name="title_activity_main">密码保险箱</string>

</resources>
